[package]
name = "snmp"
version = "0.2.2"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>"]
description = "SNMP client library"
license = "MIT/Apache-2.0"
repository = "https://github.com/hroi/rust-snmp"
documentation = "https://docs.rs/crate/snmp"
readme = "README.md"
keywords = ["networking", "snmp", "monitoring"]


[dependencies]
serde = { version = "1.0.123", features = ["derive"] }